manifest/backstage_deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: backstage
  name: backstage
spec:
  replicas: 2
  selector:
    matchLabels:
      app: backstage
  strategy: {}
  template:
    metadata:
      labels:
        app: backstage
    spec:
      containers:
      - image: dennismuturi8/backstage:014c4e6a7824bd61d8a917b1d8351cb46aa6b1f7
        name: backstage
        ports:
        - containerPort: 7007
